@@ -15,13 +15,142 @@
     <name>pass-gate</name>
 
     <modules>
-        <module>pass-gate-store</module>
-		<module>pass-gate-store-grpc</module>
-		<module>pass-gate-store-client</module>
+        <module>services/pass-gate-store</module>
+		<module>libs/pass-gate-store-grpc</module>
+		<module>libs/pass-gate-store-client</module>
 	</modules>
     <properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+
+		<grpc.version>1.42.1</grpc.version>
+		<grpc.kotlin.version>1.3.0</grpc.kotlin.version>
+		<grpc.spring.boot.starter.version>2.13.1.RELEASE</grpc.spring.boot.starter.version>
 		<java.version>17</java.version>
-		<kotlin.version>1.7.22</kotlin.version>
+		<java.grpc.version>1.53.0</java.grpc.version>
+		<kotlin.version>1.8.10</kotlin.version>
+		<protobuf.version>3.22.0</protobuf.version>
+		<protobuf.protoc.version>3.22.0</protobuf.protoc.version>
 	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<!-- start of pass-gate dependencies -->
+			<dependency>
+				<groupId>cz.tyckouni</groupId>
+				<artifactId>pass-gate-store-client</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>cz.tyckouni</groupId>
+				<artifactId>pass-gate-store-grpc</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<!-- end of pass-gate dependencies -->
+
+			<!-- start of external dependencies -->
+			<dependency>
+				<groupId>net.devh</groupId>
+				<artifactId>grpc-spring-boot-starter</artifactId>
+				<version>${grpc.spring.boot.starter.version}</version>
+			</dependency>
+			<!-- end of external dependencies -->
+		</dependencies>
+	</dependencyManagement>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
+			<version>${kotlin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-test</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.jetbrains.kotlin</groupId>
+				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>${kotlin.version}</version>
+				<executions>
+					<execution>
+						<id>compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>test-compile</id>
+						<phase>test-compile</phase>
+						<goals>
+							<goal>test-compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<jvmTarget>${maven.compiler.target}</jvmTarget>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.1.0</version>
+				<executions>
+					<execution>
+						<id>ktlint</id>
+						<phase>verify</phase>
+						<configuration>
+							<target name="ktlint">
+								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+									<arg value="src/**/*.kt"/>
+									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+								</java>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>ktlint-format</id>
+						<configuration>
+							<target name="ktlint">
+								<java taskname="ktlint" dir="${basedir}" fork="true" failonerror="true"
+									  classpathref="maven.plugin.classpath" classname="com.pinterest.ktlint.Main">
+									<!-- Note: the JVM args below are only required when running ktlint with Java 16+ in format mode -->
+									<jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+									<jvmarg value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
+									<arg value="-F"/>
+									<arg value="src/**/*.kt"/>
+									<!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+								</java>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+				<dependencies>
+					<dependency>
+						<groupId>com.pinterest</groupId>
+						<artifactId>ktlint</artifactId>
+						<version>0.48.2</version>
+					</dependency>
+					<!-- additional 3rd party ruleset(s) can be specified here -->
+				</dependencies>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
